# agentic-sdlc-scaffolding

./: .gitignore  2026-05-25-225938-in-the-scope-of-components-we-defined-in-the-doc.txt  AGENTS.md  README.md  main.py  pyproject.toml
.cursor/commands/: fix-issue.md  pr.md  review.md  update-deps.md
.cursor/memory/: active-context.md
.cursor/plans/: TEMPLATE.md
.cursor/rules/: 00-project-conventions.mdc  01-code-style.mdc  02-testing.mdc  03-git-workflow.mdc  04-guardrails.mdc  05-agents-architecture.mdc  06-ports-architecture.mdc  07-adapters-architecture.mdc
.cursor/skills/code-review/: SKILL.md
.cursor/skills/deploy-staging/: SKILL.md
.cursor/skills/onboard/: SKILL.md
agentic_sdlc_scaffolding.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/adr/: ADR-001-workflow-orchestration.md  ADR-002-openshift-persistence.md  ADR-003-api-versioning-idempotency.md  ADR-004-domain-contracts-pydantic.md  ADR-005-reasoning-flow-skills.md  ADR-006-in-agent-hitl-placement.md  TEMPLATE.md
docs/architecture/: OVERVIEW.md  TEMPLATE.md  agents.md  authentication.md  config.md  data-and-contracts.md  integrations.md  observability.md  orchestration.md  persistence.md  product-and-hitl.md  quality-and-delivery.md  repo-layout.md  runtime-topology.md  tech-stack.md
src/: __init__.py
src/adapters/: __init__.py
src/agents/: __init__.py
src/api/: __init__.py
src/config/: __init__.py
src/domain/: __init__.py
src/intake/: __init__.py
src/observability/: __init__.py
src/persistence/: __init__.py
src/ports/: __init__.py
src/workflow/: __init__.py
(+11 files in other folders)
